2012-01-17  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power6x/Implies: Points to power6.
	* sysdeps/powerpc/powerpc32/power6x/fpu/Implies: Points to power6.
	* sysdeps/powerpc/powerpc64/power6x/Implies: Points to power6.
	* sysdeps/powerpc/powerpc64/power6x/fpu/Implies: Points to power6.

2012-01-13  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* Makefile.in (libdfp_cxx_tests): Add test-ostream-g-spec test.
	* tests/test-ostream-g-spec.cpp: New file to test decimal/decimal's
	_LIBDFP_G_CONV_SPEC guard.
	* tests/test-printf.c: Add newly discovered %DDg failures.
	* tests/scaffold.c (_OSC_P): Add comment regarding
	_LIBDFP_G_CONV_SPEC.
	* tests/test-istream.cpp: Removed unused variable.
	* README.user: Update with information about NOT using #include
	<dfp/*header*>.
	* dfp/float.h: Remove commented out decimal class predeclares.
	* dfp/decimal/decimal: Move #include <float.h> to before #include_next
	<decimal/decimal> to prevent missing _Decimal[32|64|128] definition
	errors.

2012-01-10  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* Makefile.in (libdfp_cxx_tests): Added test-istream.
	* tests/scaffold.c (_ISC _ISC_P): Added new istream compare macros
	conditional on #ifdef __cplusplus.
	* tests/test-istream.cpp: New test for operator>>.
	* tests/test-strtod.c: Added a new value to test.
	* dfp/float.h: Correct _Decimal[32|64|128] declarations.
	* dfp/decimal/decimal: Added operator>> support for decimal[32|64|128]
	C++ decimal floating point types.
	* README.user: Updated information on operator<< and operator>>
	support.

2011-12-14  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* tests/test-log10d.c: Added missing #include "decode.h".
	* tests/scaffold.c (_OSC _OSC_P): Added new ostream compare macros
	conditional on #ifdef __cpluspluc.
	* tests/test-ostream.cpp: Added scaffold.c based tests.

2011-12-12  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* dfp/decimal/decimal(operator<< decimal128): Removed now spurious